* Tue Jun 21 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.2-0
- Updated the calls to use_iptables to be able to be disabled globally.

* Thu May 19 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.1-0
- Made master::reports a private class

* Thu Feb 25 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 6.0.0-24
- Added compliance function support

* Wed Feb 24 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-24
- Fix the subscribe on the Service['puppet'] resource to not be a hard coded
  path.

* Thu Dec 24 2015 Trevor Vaughan <tvaughahn@onyxpoint.com> - 6.0.0-23
- Fixed minor logic errors
- Now have configuration changes notify Service['puppetserver'] instead of the
  more efficient Exec. This gets around a race condition when the service is
  restarted and the exec fires before the service has fully restarted.
- Fixed issues with the puppetserver_* helper scripts that surfaced due to
  changes in the HTTP responses from the Puppet Server.

* Fri Dec 04 2015 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.0.0-22
- Replaced all 'lsb*' facts with their (package-independent)
  'operatingsystem*' counterparts.
- Moved parameter validations to the top of each class.

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.0.0-21
- migration to simplib and simpcat (lib/ only)

* Wed Nov 04 2015 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.0.0-20
- Improved logic for  defaults

* Thu Sep 17 2015 Kendall Moore <kmoore@keywcorp.com> - 6.0.0-19
- Ensure keylength is set to 2048 in puppet.conf if FIPS mode is enabled.

* Wed Jun 17 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-18
- Remove the legacy code that restarted httpd when the Puppet CRL was
  downloaded.

* Tue May 05 2015 Jacob Gingrich <jacob.gingrich@onyxpoint.com> - 6.0.0-17
- Enabled the puppetserver service

* Fri Mar 20 2015 Kendall Moore <kmoore@keywcorp.com> - 6.0.0-16
- Added a puppet_ruby_dir fact to return the location of the