@@ -1,6 +1,6 @@
 {
   "name":    "simp-pupmod",
-  "version": "6.0.2",
+  "version": "6.0.3",
   "author":  "SIMP",
   "summary": "A puppet module to manage puppet",
   "license": "Apache-2.0",
@@ -9,6 +9,10 @@
   "issues_url":   "https://simp-project.atlassian.net",
   "tags": [ "simp", "ci", "pupmod" ],
   "dependencies": [
+    {
+      "name": "simp/puppet-haveged",
+      "version_requirement": ">= 0.3.0 < 1.0.0"
+    },
     {
       "name": "puppetlabs/stdlib",
       "version_requirement": ">= 4.1.0"
